Magic fix for the coming soon mobile logo

--- a/public/scss/links.styles.scss
+++ b/public/scss/links.styles.scss
@@ -221,9 +221,6 @@ body {
                     font-size: 1em;
                 }
             }
-            .none {
-                display: none;
-            }
             a:link {
                 text-decoration: none;
             }
